# agent-playbook-kit

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
examples/: agent-playbook.toml
scripts/: selfcheck.py
src/agent_playbook_kit/: __init__.py  cli.py
tests/: test_cli.py
