[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-playbook-kit"
version = "0.1.6"
description = "Compile one TOML playbook into practical AI coding-agent instruction files."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "SergioYin"}]
keywords = ["ai-agents", "context-engineering", "claude-code", "codex", "cursor", "developer-tools"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Software Development :: Documentation",
  "Topic :: Software Development :: Quality Assurance"
]

[project.scripts]
agent-playbook = "agent_playbook_kit.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
